FullQa New/src/PS Enterprise/objects/Forecast_Enhanced_Summary_Category__c.object
<CustomObject>
    <customHelpPage>ForecastEnhancedSummaryCategoryHelp</customHelpPage>
    <description>Stores the weighted category totals for the related Region, Practice, or Group.</description>
    <fields>
        <fullName>Category_Label__c</fullName>
        <formula>Forecast_Setup_Category__r.Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Enhanced_Summary__c</fullName>
        <label>Forecast Summary</label>
        <referenceTo>Forecast_Enhanced_Summary__c</referenceTo>
        <relationshipLabel>Forecast Summary Categories</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Summary_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Forecast_Opportunities_Value__c</fullName>
        <label>Forecast Opportunities Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Projects_Value__c</fullName>
        <label>Forecast Projects Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Setup_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Forecast Setup Category</label>
        <referenceTo>Forecast_Setup_Category__c</referenceTo>
        <relationshipName>Forecast_Enhanced_Summary_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forecast_Sublevels_Value__c</fullName>
        <label>Forecast Sublevels Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Value__c</fullName>
        <label>Forecast Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Forecast Summary Category</label>
    <nameField>
        <displayFormat>FSummaryCategory-{0000}</displayFormat>
        <label>Forecast Summary Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Summary Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>